adding vector api tests