@@ -1,5 +1,6 @@
 package mtakeshi1.playground.jude;
 
+import jdk.incubator.vector.DoubleVector;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.infra.Blackhole;
@@ -7,6 +8,7 @@ import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.options.Options;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 import java.util.concurrent.TimeUnit;
@@ -27,6 +29,17 @@ public class JMHPlay {
 
     private static final List<double[]> sample;
     private static final LinkedList llist;
+    private static final IntegrableFunction f = $ -> {
+        double x = $[0];
+        double y = $[1];
+        double z = $[2];
+
+        return x * y * z == 0 ? 0 : sin(1 / y) + pow(1 / (x + z), 1D / 3);
+    };
+
+    private static final double[] iterVec = Play.evaluateIterationVector(dimension);
+
+    private static final DoubleVector iterVector = DoubleVector.fromArray(DoubleVector.SPECIES_256, Arrays.copyOf(iterVec, 4), 0);
 
     static {
         var random = new Random(10);
@@ -43,55 +56,34 @@ public class JMHPlay {
 
     @Benchmark
     public void testLoop(Blackhole blackhole) {
-        IntegrableFunction f = $ -> {
-            double x = $[0];
-            double y = $[1];
-            double z = $[2];
-
-            return x * y * z == 0 ? 0 : sin(1 / y) + pow(1 / (x + z), 1D / 3);
-        };
         blackhole.consume(Play.evaluateStatistics(dimension, sample, boost, f));
     }
 
     @Benchmark
     public void testRecursion(Blackhole blackhole) {
-        IntegrableFunction f = $ -> {
-            double x = $[0];
-            double y = $[1];
-            double z = $[2];
-
-            return x * y * z == 0 ? 0 : sin(1 / y) + pow(1 / (x + z), 1D / 3);
-        };
         blackhole.consume(Play.evaluateStatistics2(dimension, llist, boost, f));
     }
+
     @Benchmark
     public void testRecursionNonStream(Blackhole blackhole) {
-        IntegrableFunction f = $ -> {
-            double x = $[0];
-            double y = $[1];
-            double z = $[2];
-
-            return x * y * z == 0 ? 0 : sin(1 / y) + pow(1 / (x + z), 1D / 3);
-        };
         blackhole.consume(NonStreamingPlay.evaluateStatistics2(dimension, llist, boost, f));
     }
 
 
     @Benchmark
     public void testTailRecursion(Blackhole blackhole) {
-        IntegrableFunction f = $ -> {
-            double x = $[0];
-            double y = $[1];
-            double z = $[2];
-
-            return x * y * z == 0 ? 0 : sin(1 / y) + pow(1 / (x + z), 1D / 3);
-        };
         blackhole.consume(TailRecursivePlay.evaluateStatistics(dimension, sample, boost, f));
+    }
+
+    @Benchmark
+    public void testVector(Blackhole blackhole) {
+        blackhole.consume(VectorPlay.evaluateIntegralVector(llist, boost, f, iterVector));
     }
 
     public static void main(String[] args) throws Throwable {
         Options opt = new OptionsBuilder()
                 .include(JMHPlay.class.getSimpleName())
+                .jvmArgs("--add-modules", "jdk.incubator.vector", "--enable-preview")
                 .forks(1)
                 .timeUnit(TimeUnit.MILLISECONDS)
                 .build();
